--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,12 +23,22 @@ h1{
   text-rendering: optimizeLegibility;
 }
 
-.container{
-  display: block;
+.outer{
+  display: table;
+  position: absolute;
+  height: 98%;
+  width: 99%;
+}
+
+.middle{
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner{
+  margin-left: auto;
+  margin-right: auto;
   width: 471px;
-  height: auto;
-  margin: auto;
-  margin-top: 2%;
 }
 
 /*---------------moving brand------------*/
